--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-google-genai>=0.8.0
+groq>=0.9.0
 streamlit>=1.32.0
 chromadb>=0.5.0
 pdfplumber>=0.10.0
@@ -7,3 +7,4 @@ python-pptx>=0.6.23
 youtube-transcript-api>=0.6.2
 pytube>=15.0.0
 tiktoken>=0.7.0
+sentence-transformers>=3.0.0
